<resources>
    <string name="app_name">countDownTimer</string>
    <string name="time">00:00:00</string>
    <string name="start">start timer</string>
    <string name="pause">Pause Timer</string>
    <string name="resume">Resume Time</string>
    <string name="hrs">hrs</string>
    <string name="min">min</string>
    <string name="sec">sec</string>
    <string name="done">Done</string>
</resources>