<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".MainActivity"
    android:background="@color/teal_700">
<TextView
    android:id="@+id/set_time"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_above="@id/ll"
    android:layout_centerInParent="true"
    android:layout_marginBottom="100dp"
    android:gravity="center"
    android:text="@string/time"
    android:textColor="@color/black"
    android:textSize="20sp"
    android:textStyle="bold|normal"/>
    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/card_v"
        android:layout_centerInParent="true"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:cardCornerRadius="10dp"
         app:cardBackgroundColor="@color/teal_700">
            <EditText
                android:id="@+id/hours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hrs"
                android:inputType="time"
                android:padding="10dp" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/teal_700">
            <EditText
                android:id="@+id/minutes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/min"
                android:inputType="time"
                android:padding="10dp" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/teal_700">
            <EditText
                android:id="@+id/second"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sec"
                android:inputType="time"
                android:padding="10dp" />
        </androidx.cardview.widget.CardView>


    </LinearLayout>
    <com.google.android.material.card.MaterialCardView
        app:cardBackgroundColor="@color/teal_700"
        android:id="@+id/card_v"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:cardCornerRadius="0dp">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/start_timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="50dp"
                android:text="@string/start"
                android:textAllCaps="false"/>
            <Button

                android:id="@+id/pause_resume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@id/start_timer"
                android:text="@string/pause"
                android:textAlignment="center"
                android:textAllCaps="false"
                tools:ignore="RtlCompat" />
            <TextView
                android:id="@+id/set_timing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/start_timer"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                />
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>
</RelativeLayout>